// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/cardDetail/CardDetail should show comments 1`] = `
<div>
  <div
    class="CardDetail content"
  >
    <div
      class="BlockIconSelector"
    >
      <div
        class="MenuWrapper"
      >
        <div
          class="octo-icon size-l"
        >
          <span>
            i
          </span>
        </div>
      </div>
    </div>
    <div
      class="EditableAreaWrap"
    >
      <textarea
        class="EditableArea Editable title"
        height="0"
        placeholder="Untitled"
        rows="1"
        spellcheck="true"
        title="title"
      >
        title
      </textarea>
      <div
        class="EditableAreaContainer"
      >
        <textarea
          aria-hidden="true"
          class="EditableAreaReference Editable title"
          dir="auto"
          disabled=""
          rows="1"
        >
          title
        </textarea>
      </div>
    </div>
    <div
      class="octo-propertylist CardDetailProperties"
    >
      <div
        class="octo-propertyrow"
      >
        <div
          class="MenuWrapper"
        >
          <div
            class="octo-propertyname"
          >
            <button
              class="Button    "
              type="button"
            >
              <span>
                Property 1
              </span>
            </button>
          </div>
        </div>
        <div
          class="octo-propertyvalue"
          tabindex="0"
        >
          <span
            class="Label propColorBrown "
          >
            value 1
          </span>
        </div>
      </div>
      <div
        class="octo-propertyrow"
      >
        <div
          class="MenuWrapper"
        >
          <div
            class="octo-propertyname"
          >
            <button
              class="Button    "
              type="button"
            >
              <span>
                Property 2
              </span>
            </button>
          </div>
        </div>
        <div
          class="octo-propertyvalue"
          tabindex="0"
        >
          <span
            class="Label empty "
          >
            Empty
          </span>
        </div>
      </div>
      <div
        class="octo-propertyrow"
      >
        <div
          class="MenuWrapper"
        >
          <div
            class="octo-propertyname"
          >
            <button
              class="Button    "
              type="button"
            >
              <span>
                Property 3
              </span>
            </button>
          </div>
        </div>
        <div
          class="octo-propertyvalue"
          tabindex="0"
        >
          <span
            class="Label empty "
          >
            Empty
          </span>
        </div>
      </div>
      <div
        class="octo-propertyname add-property"
      >
        <button
          class="Button    "
          type="button"
        >
          <span>
            + Add a property
          </span>
        </button>
      </div>
    </div>
    <hr />
    <div
      class="CommentsList"
    >
      <div
        class="Comment comment"
      >
        <div
          class="comment-header"
        >
          <img
            class="comment-avatar"
            src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
          />
          <div
            class="comment-username"
          >
            username_1
          </div>
          <div
            class="comment-date"
          >
            January 01, 5:30 AM
          </div>
          <div
            class="MenuWrapper"
          >
            <div
              class="Button IconButton"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </div>
          </div>
        </div>
        <div
          class="comment-text"
        >
          <p>
            Comment 1
          </p>
        </div>
      </div>
      <div
        class="Comment comment"
      >
        <div
          class="comment-header"
        >
          <img
            class="comment-avatar"
            src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
          />
          <div
            class="comment-username"
          />
          <div
            class="comment-date"
          >
            January 01, 5:30 AM
          </div>
          <div
            class="MenuWrapper"
          >
            <div
              class="Button IconButton"
            >
              <i
                class="CompassIcon icon-dots-horizontal OptionsIcon"
              />
            </div>
          </div>
        </div>
        <div
          class="comment-text"
        >
          <p>
            Comment 2
          </p>
        </div>
      </div>
      <div
        class="commentrow"
      >
        <img
          class="comment-avatar"
          src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
        />
        <div
          class="MarkdownEditor octo-editor newcomment "
        >
          <div
            class="octo-editor-preview octo-placeholder"
          >
            <p>
              Add a comment...
            </p>
          </div>
          <div
            class="octo-editor-activeEditor"
            style="visibility: hidden; position: absolute; top: 0px; left: 0px;"
          >
            <div
              id="simplemde-editor-1-wrapper"
            >
              <textarea
                id="simplemde-editor-1"
                style="display: none;"
              />
              <div
                class="EasyMDEContainer"
              >
                <div
                  class="CodeMirror cm-s-easymde CodeMirror-wrap"
                >
                  <div
                    style="overflow: hidden; position: relative; width: 3px; height: 0px;"
                  >
                    <textarea
                      autocapitalize="off"
                      autocorrect="off"
                      spellcheck="false"
                      style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="CodeMirror-vscrollbar"
                    cm-not-content="true"
                    tabindex="-1"
                  >
                    <div
                      style="min-width: 1px;"
                    />
                  </div>
                  <div
                    class="CodeMirror-hscrollbar"
                    cm-not-content="true"
                    tabindex="-1"
                  >
                    <div
                      style="height: 100%; min-height: 1px;"
                    />
                  </div>
                  <div
                    class="CodeMirror-scrollbar-filler"
                    cm-not-content="true"
                  />
                  <div
                    class="CodeMirror-gutter-filler"
                    cm-not-content="true"
                  />
                  <div
                    class="CodeMirror-scroll"
                    style="min-height: 10px;"
                    tabindex="-1"
                  >
                    <div
                      class="CodeMirror-sizer"
                      style="margin-left: 0px;"
                    >
                      <div
                        style="position: relative;"
                      >
                        <div
                          class="CodeMirror-lines"
                          role="presentation"
                        >
                          <div
                            role="presentation"
                            style="position: relative; outline: none;"
                          >
                            <div
                              class="CodeMirror-measure"
                            >
                              <pre
                                class="CodeMirror-line-like"
                              >
                                <span>
                                  xxxxxxxxxx
                                </span>
                              </pre>
                            </div>
                            <div
                              class="CodeMirror-measure"
                            />
                            <div
                              style="position: relative; z-index: 1;"
                            />
                            <div
                              class="CodeMirror-cursors"
                            />
                            <div
                              class="CodeMirror-code"
                              role="presentation"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      style="position: absolute; height: 50px; width: 1px;"
                    />
                    <div
                      class="CodeMirror-gutters"
                      style="display: none;"
                    />
                  </div>
                </div>
                <div
                  class="editor-preview-side editor-preview"
                />
              </div>
            </div>
          </div>
        </div>
        
      </div>
      <hr />
    </div>
  </div>
  <div
    class="CardDetail content fullwidth"
  >
    <div
      class="octo-content"
    >
      <div
        class="octo-block"
      >
        <div
          class="octo-block-margin"
        />
        <div
          class="MarkdownEditor octo-editor  "
        >
          <div
            class="octo-editor-preview octo-placeholder"
          >
            <p>
              Add a description...
            </p>
          </div>
          <div
            class="octo-editor-activeEditor"
            style="visibility: hidden; position: absolute; top: 0px; left: 0px;"
          >
            <div
              id="simplemde-editor-2-wrapper"
            >
              <textarea
                id="simplemde-editor-2"
                style="display: none;"
              />
              <div
                class="EasyMDEContainer"
              >
                <div
                  class="CodeMirror cm-s-easymde CodeMirror-wrap"
                >
                  <div
                    style="overflow: hidden; position: relative; width: 3px; height: 0px;"
                  >
                    <textarea
                      autocapitalize="off"
                      autocorrect="off"
                      spellcheck="false"
                      style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"
                      tabindex="0"
                    />
                  </div>
                  <div
                    class="CodeMirror-vscrollbar"
                    cm-not-content="true"
                    tabindex="-1"
                  >
                    <div
                      style="min-width: 1px;"
                    />
                  </div>
                  <div
                    class="CodeMirror-hscrollbar"
                    cm-not-content="true"
                    tabindex="-1"
                  >
                    <div
                      style="height: 100%; min-height: 1px;"
                    />
                  </div>
                  <div
                    class="CodeMirror-scrollbar-filler"
                    cm-not-content="true"
                  />
                  <div
                    class="CodeMirror-gutter-filler"
                    cm-not-content="true"
                  />
                  <div
                    class="CodeMirror-scroll"
                    style="min-height: 10px;"
                    tabindex="-1"
                  >
                    <div
                      class="CodeMirror-sizer"
                      style="margin-left: 0px;"
                    >
                      <div
                        style="position: relative;"
                      >
                        <div
                          class="CodeMirror-lines"
                          role="presentation"
                        >
                          <div
                            role="presentation"
                            style="position: relative; outline: none;"
                          >
                            <div
                              class="CodeMirror-measure"
                            >
                              <pre
                                class="CodeMirror-line-like"
                              >
                                <span>
                                  xxxxxxxxxx
                                </span>
                              </pre>
                            </div>
                            <div
                              class="CodeMirror-measure"
                            />
                            <div
                              style="position: relative; z-index: 1;"
                            />
                            <div
                              class="CodeMirror-cursors"
                            />
                            <div
                              class="CodeMirror-code"
                              role="presentation"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      style="position: absolute; height: 50px; width: 1px;"
                    />
                    <div
                      class="CodeMirror-gutters"
                      style="display: none;"
                    />
                  </div>
                </div>
                <div
                  class="editor-preview-side editor-preview"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="CardDetail content add-content"
  >
    <div
      class="MenuWrapper"
    >
      <button
        class="Button    "
        type="button"
      >
        <span>
          Add content
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`components/cardDetail/CardDetail should show comments in readonly view 1`] = `
<div>
  <div
    class="CardDetail content"
  >
    <div
      class="BlockIconSelector"
    >
      <div
        class="octo-icon size-l readonly"
      >
        <span>
          i
        </span>
      </div>
    </div>
    <div
      class="EditableAreaWrap"
    >
      <textarea
        class="EditableArea Editable readonly title"
        height="0"
        placeholder="Untitled"
        readonly=""
        rows="1"
        spellcheck="true"
        title="title"
      >
        title
      </textarea>
      <div
        class="EditableAreaContainer"
      >
        <textarea
          aria-hidden="true"
          class="EditableAreaReference Editable readonly title"
          dir="auto"
          disabled=""
          rows="1"
        >
          title
        </textarea>
      </div>
    </div>
    <div
      class="octo-propertylist CardDetailProperties"
    >
      <div
        class="octo-propertyrow"
      >
        <div
          class="octo-propertyname"
        >
          Property 1
        </div>
        <div
          class="octo-propertyvalue"
          tabindex="0"
        >
          <span
            class="Label propColorBrown "
          >
            value 1
          </span>
        </div>
      </div>
      <div
        class="octo-propertyrow"
      >
        <div
          class="octo-propertyname"
        >
          Property 2
        </div>
        <div
          class="octo-propertyvalue"
          tabindex="0"
        >
          <span
            class="Label empty "
          >
            Empty
          </span>
        </div>
      </div>
      <div
        class="octo-propertyrow"
      >
        <div
          class="octo-propertyname"
        >
          Property 3
        </div>
        <div
          class="octo-propertyvalue"
          tabindex="0"
        >
          <span
            class="Label empty "
          >
            Empty
          </span>
        </div>
      </div>
    </div>
    <hr />
    <div
      class="CommentsList"
    >
      <div
        class="Comment comment"
      >
        <div
          class="comment-header"
        >
          <img
            class="comment-avatar"
            src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
          />
          <div
            class="comment-username"
          />
          <div
            class="comment-date"
          >
            January 01, 5:30 AM
          </div>
        </div>
        <div
          class="comment-text"
        >
          <p>
            Comment 1
          </p>
        </div>
      </div>
      <div
        class="Comment comment"
      >
        <div
          class="comment-header"
        >
          <img
            class="comment-avatar"
            src="data:image/svg+xml,<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\" style=\\"fill: rgb(192, 192, 192);\\"><rect width=\\"100\\" height=\\"100\\" /></svg>"
          />
          <div
            class="comment-username"
          />
          <div
            class="comment-date"
          >
            January 01, 5:30 AM
          </div>
        </div>
        <div
          class="comment-text"
        >
          <p>
            Comment 2
          </p>
        </div>
      </div>
      <hr />
    </div>
  </div>
  <div
    class="CardDetail content fullwidth"
  >
    <div
      class="octo-content"
    >
      <div
        class="octo-block"
      >
        <div
          class="octo-block-margin"
        />
      </div>
    </div>
  </div>
</div>
`;
